# arirs

.github/workflows/: ci.yaml
arirs/: Cargo.toml
