[package]
edition = "2021"
name = "arirs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tracing = { version = "0.1.41", features = ["attributes"] }
url = "2.5.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
